--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^3.0.1
+  intl: ^0.17.0
   json_annotation: ^4.5.0
   stacked: ^2.3.12
   stacked_services: ^0.8.26
